--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -196,7 +196,7 @@
 					<h2>用户选择诗歌其英文词歌文本显示</h2>
 					<div class="media">
             <image src="./img/12.hymnchtv_lyrics_english.png"/>
-						<p>长按诗歌显示画面弹出上下文菜单选项；然后选择[英文歌词]选项（如果有）；则应用会自动访问在线相关的英文词歌文本。使用[返回键]返回上一屏幕</p>
+						<p>按英文歌词按钮或长按诗歌显示画面弹出上下文菜单选项；然后选择[英文歌词]选项；则应用会自动访问在线相关的英文词歌文本。使用[返回键]返回上一屏幕</p>
 					</div>
 				</li>
 
