minor text alignment

--- a/hymnchtv/faq.html
+++ b/hymnchtv/faq.html
@@ -613,10 +613,10 @@ ul li {
          </li>
        <li><b>Media Url</b>: This parameter specifies the actual web/youtube url link. Otherwise it is set to null if the
          associated media content is a local media file. e.g.: <br />
-         hymn_bb,015,0,HYMN_MEDIA,https://youtu.be/432RvdcGaM4,null</li>
+         hymn_bb,015,0,HYMN_MEDIA, https://youtu.be/432RvdcGaM4,null</li>
        <li><b>Media FilePath</b>: This parameter specifies the full path for the local stored medium file. This field should
          be set to 'null' if the media content is referring to an url link. e.g.: <br />
-         hymn_db,616,0,HYMN_MEDIA,null,/storage/emulated /0/Download/hymnchtv/hymn_db/media_media/ChHymns-0616.mp3</li>
+         hymn_db,616,0,HYMN_MEDIA,null,/storage/emulated /0/Download/hymnchtv/hymn_db/media_media /ChHymns-0616.mp3</li>
      </ul>
    </div> 
 
